[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "koi-net-github-sensor-node"
version = "0.1.0"
description = "GitHub sensor node for KOI-net"
authors = [
    {name = "Factory Droid", email = "droid@factory.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "httpx>=0.27.0",
    "koi-net",
    "koi-net-shared",
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build", "pytest>=7.0", "pytest-mock>=3.10"]

[tool.uv.sources]
koi-net = { workspace = true }
koi-net-shared = { workspace = true }

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
extraPaths = ["src", "../koi-net/src", "../koi-net-shared/src"]
