[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "koi-net-github-sensor-node"
version = "0.1.0"
description = "GitHub sensor node for KOI-net"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "httpx>=0.28.1",
    "koi-net>=1.1.0b8",
    "colorama>=0.4.6",
    "rid_lib>=3.2.14",
    "pydantic>=2.10.6",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build", "pytest>=7.0", "pytest-mock>=3.10"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
